@feat: add s3 support and admin routes
